--- a/README.html
+++ b/README.html
@@ -34,3 +34,10 @@
 <BR> <blockquote><blockquote>I will leave tutorials on github.</blockquote></blockquote>
 <BR> <blockquote>Story Development</blockquote>
 <BR> <blockquote><blockquote>Use github and notepad to take notes that everyone can see.</blockquote></blockquote>
+# Payton Ward
+<BR> Presiderp
+<BR> 918-863-0487
+<BR> Tasks:
+<BR> <blockquote><blockquote>Voice Things.</blockquote></blockquote>
+<BR> <blockquote><blockquote>I will try and get everything audio related.</blockquote></blockquote>
+<BR> <blockquote><blockquote>Musical score acquisition.</blockquote></blockquote>
