--- a/README.html
+++ b/README.html
@@ -37,6 +37,7 @@
 # Payton Ward
 <BR> Presiderp
 <BR> 918-863-0487
+<BR> paytonatr9@gmail.com
 <BR> Tasks:
 <BR> <blockquote><blockquote>Voice Things.</blockquote></blockquote>
 <BR> <blockquote><blockquote>I will try and get everything audio related.</blockquote></blockquote>
