--- a/README.html
+++ b/README.html
@@ -10,14 +10,6 @@
 <BR> <b>Tasks:</b>
 <BR> Research Unreal Engine
 <BR> Gameplay Experimentation
-# Jacob Mund 
-<BR> Awesomee03 
-<BR> 620-688-2846
-<BR> <b>Tasks:</b>
-<BR> <blockquote>Research Unreal Engine</blockquote>
-<BR> <blockquote><blockquote>I will leave tutorials on github.</blockquote></blockquote>
-<BR> <blockquote>Gameplay Experimentation</blockquote>
-<BR> <blockquote><blockquote>Use github to make sure all your progress is visible.</blockquote></blockquote>
 # Peter Spoon 
 <BR> petzor00 
 <BR> 620-716-1254
@@ -34,7 +26,7 @@
 <BR> <blockquote><blockquote>I will leave tutorials on github.</blockquote></blockquote>
 <BR> <blockquote>Story Development</blockquote>
 <BR> <blockquote><blockquote>Use github and notepad to take notes that everyone can see.</blockquote></blockquote>
-# Payton Ward
+# <b>Payton Ward</b>
 <BR> Presiderp
 <BR> 918-863-0487
 <BR> paytonatr9@gmail.com
